2002-01-07  Dave Peticolas  <dave@krondo.com>

	* src/backend/postgres/account.c: check for missing currency
	when loading accounts

	* src/backend/postgres/PostgresBackend.c: check for missing
	currency when loading transactions

2002-01-07  Christian Stimming  <stimming@tuhh.de>

	* src/report/report-system/commodity-utilities.scm: Tweaked the
	exchange rate calculation so that it will work in even more
	complicated cases, involving different Euroland and other
	currencies.

2002-01-06  Christian Stimming  <stimming@tuhh.de>

	* src/report/report-system/html-utilities.scm,
	src/report/standard-reports/*: Added option hyperlink in report
	warnings.

	* doc/sgml/*/xacc-euro.sgml: Fixed DEM rate as pointed out by
	Gregor Hoffleit <gregor@hoffleit.de>.

2002-01-05  Christian Stimming  <stimming@tuhh.de>

	* src/report/report-system/html-*.scm,
	src/report/stylesheets/stylesheet-*.scm: Added nowrap attribute
	for cells containing numbers.

2002-01-03  Dave Peticolas  <dave@krondo.com>

	* src/backend/postgres/PostgresBackend.c: allow gnucash tables
	to be installed in an existing database.

	* src/backend/postgres/upgrade.c: use pointer<->int conversion
	macros

2001-12-27  Dave Peticolas  <dave@krondo.com>

	* src/backend/postgres/test/test-db.c: expand testing

	* src/engine/Transaction.c: fix bugs. keep positive editlevel
	while committing and rolling back transaction.

2001-12-25  Dave Peticolas  <dave@krondo.com>

	* src/backend/postgres/test/test-db.c: test rollback

	* src/engine/Transaction.c: fix bug in transaction rollback

	* src/engine/test-core/test-engine-stuff.h: add test routine

	* src/engine/test-core/test-engine-stuff.c: add test routine

2001-12-20  Dave Peticolas  <dave@krondo.com>

	* src/scm/main.scm: update for api changes

	* src/report/report-gnome/window-report.h: add new init api

	* src/report/report-gnome/window-report.c: move some report
	initialization here from top-level.c
